mobile scrolling bounce resolve with body overflow clip + changes in mobile body position

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,7 +1,17 @@
 .parent {
-  height: 600px;
-  overflow-y: auto;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 60px;
+  height: 100%;
+  overflow: scroll;
+}
+
+.child1 {
+  background: green;
+}
+
+.child2 {
+  background: blue;
 }
 
 .grandchild {
