--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -68,6 +68,7 @@
 
 @media only screen and (max-width: 550px) {
   .text-zone {
+    margin-top: 60px;
     min-width: 285px !important;
     max-width: 285px !important;
 
