--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -61,7 +61,7 @@
 
 @media only screen and (max-width: 550px) {
   .container {
-    position: relative;
+    position: absolute;
     left: 0;
     width: 100%;
   }
